--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>3.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
